PostCard component, like/unlike interaction, 'liked' endpoint, minor bugfixes
