# doc/api.yaml
@@ -506,12 +506,41 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Feed'
-        '400':
-          description: Bad auth token
         '401':
           description: Unauthenticated
         '403':
           description: Trying to view somebody else's feed
+
+  /posts/{postID}/liked/{userID}:
+    get:
+      tags:
+        - Feed tools
+      summary: Is post liked?
+      description: Checks whether the post has been liked by user
+      operationId: isLiked
+      parameters:
+        - in: path
+          name: userID
+          description: Your ID
+          required: true
+          schema:
+            $ref: '#/components/schemas/ID'
+        - in: path
+          name: postID
+          required: true
+          schema:
+            $ref: '#/components/schemas/ID'
+      responses:
+        '200':
+          description: Operation successful
+          content:
+            text/plain:
+              schema:
+                type: boolean
+        '401':
+          description: Unauthenticated or bad authentication
+        '404':
+          description: Post not found
 
   /posts/{postID}/like/{userID}:
     put:
